Remove unnecessary add exports config