@@ -33,7 +33,7 @@ ext.moduleName = 'ballerina.debug.adapter.cli'
 compileJava {
     inputs.property("moduleName", moduleName)
     doFirst {
-        options.compilerArgs << '--module-path' << classpath.asPath << '--add-exports' << 'com.sun.tools.javac.util=ALL-UNNAMED'
+        options.compilerArgs << '--module-path' << classpath.asPath
         classpath = files()
     }
 }
